kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-gateway
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "kong-backend-config"}'
spec:
  selector:
    app: kong-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  type: NodePort
